# dataframe

./: .ghci  .gitignore  .hlint.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  dataframe.cabal  dataframe.ghci  flake.nix  install.sh  run_compiled_repl.sh  run_profiling.sh  set_hasktorch_env  test_coverage.md
.github/workflows/: haskell-ci.yml
app/: Benchmark.hs  Main.hs  README.md  Synthesis.hs  perf-explore.hs
benchmark/: DataFrameBenchmark.hs  Main.hs
benchmark/explorer/: explorer_benchmark.exs  group_by.exs  mix.exs
benchmark/pandas/: group_by.py  pandas_benchmark.py
benchmark/polars/: group_by.py  polars_benchmark.py
cbits/: process_csv.c  process_csv.h
dataframe-hasktorch/: CHANGELOG.md  dataframe-hasktorch.cabal
dataframe-hasktorch/src/DataFrame/: Hasktorch.hs
dataframe-persistent/: CHANGELOG.md  README.md  dataframe-persistent.cabal
dataframe-persistent/data/: chinook.db
dataframe-persistent/src/DataFrame/IO/: Persistent.hs
dataframe-persistent/src/DataFrame/IO/Persistent/: TH.hs
dataframe-persistent/tests/: Main.hs  PersistentTests.hs
dataframe-symbolic-regression/: CHANGELOG.md  LICENSE  README.md  cabal.project  dataframe-symbolic-regression.cabal
dataframe-symbolic-regression/src/DataFrame/: SymbolicRegression.hs
docs/: California Housing.ipynb  coming_from_dplyr.md  coming_from_other_implementations.md  coming_from_pandas.md  coming_from_polars.md  conf.py  configuration_notes.md  cookbook.md  dataframes_in_haskell.md  exercises.md  exploratory_data_analysis_primer.md  haskell_for_data_analysis.md  index.rst  intro_to_probability_and_data.md  persistent_integration.md  quick_start.md  tutorial.md  using_dataframe_in_a_standalone_script.md
examples/: CaliforniaHousing.hs  Chipotle.hs  Iris.hs  Iris.ipynb  Iris.lhs  OneBillionRowChallenge.hs  PersistentExample.hs  README.md  cabal.project  examples.cabal  setup_torch.sh  titanic.ipynb
other/: 1000-1000-1000-MeasureTime-StatBest.perf  perf.map
scripts/: benchmark.sh  coverage.sh  dataframe.sh  format.sh  install.sh  lint.sh  package.sh  presubmit.sh  profile.sh  repl.ps1  repl.sh
src/: DataFrame.hs
src/Data/: DataFrame.hs
src/Data/DataFrame/: Colours.hs  Errors.hs  Explainer.hs  Function.hs  IO.hs  Internal.hs  Operations.hs  Util.hs
src/Data/DataFrame/Display/: Terminal.hs
src/Data/DataFrame/Display/Terminal/: Colours.hs  Plot.hs  PrettyPrint.hs
src/Data/DataFrame/IO/: CSV.hs
src/Data/DataFrame/Internal/: Column.hs  DataFrame.hs  Function.hs  Parsing.hs  Row.hs  Types.hs
src/Data/DataFrame/Operations/: Aggregation.hs  Core.hs  Sorting.hs  Statistics.hs  Subset.hs  Transformations.hs  Typing.hs
src/DataFrame/: DecisionTree.hs  Display.hs  Errors.hs  Functions.hs  IO.hs  Lazy.hs  Monad.hs  Synthesis.hs
src/DataFrame/Display/Terminal/: Colours.hs  Plot.hs  PrettyPrint.hs
src/DataFrame/Display/Web/: ChartJs.hs  Plot.hs
src/DataFrame/IO/: CSV.hs  JSON.hs  Parquet.hs  Persistent.hs
src/DataFrame/IO/Parquet/: Binary.hs  ColumnStatistics.hs  Compression.hs  Dictionary.hs  Encoding.hs  Levels.hs  Page.hs  Thrift.hs  Time.hs  Types.hs
src/DataFrame/IO/Persistent/: TH.hs
src/DataFrame/IO/Unstable/: CSV.hs
src/DataFrame/Internal/: Column.hs  DataFrame.hs  Expression.hs  Function.hs  Interpreter.hs  Parsing.hs  Row.hs  Schema.hs  Statistics.hs  Types.hs
src/DataFrame/Lazy/IO/: CSV.hs
src/DataFrame/Lazy/Internal/: Column.hs  DataFrame.hs
src/DataFrame/Operations/: Aggregation.hs  Core.hs  Join.hs  Merge.hs  Permutation.hs  Sorting.hs  Statistics.hs  Subset.hs  Transformations.hs  Typing.hs
tests/: AddColumn.hs  Apply.hs  Assertions.hs  DataFrameTests.hs  Filter.hs  Functions.hs  GenDataFrame.hs  Main.hs  Parquet.hs  Persistent.hs  Sort.hs  Take.hs
tests/Operations/: AddColumn.hs  Aggregations.hs  Apply.hs  Core.hs  Derive.hs  Filter.hs  GroupBy.hs  InsertColumn.hs  Join.hs  Merge.hs  ReadCsv.hs  Sort.hs  Statistics.hs  Subset.hs  Take.hs
tests/data/: city.csv  station.csv
tests/data/unstable_csv/: comma_in_quotes.csv  empty_values.csv  escaped_quotes.csv  json_data.csv  newlines.csv  quotes_and_newlines.csv  simple.tsv  temp_escaped_quotes.csv  temp_json_data.csv  temp_quotes_and_newlines.csv  utf8.csv
