cabal-version:      2.4
name:               dataframe
version:            0.2.0.1

synopsis: An intuitive, dynamically-typed DataFrame library.

description: An intuitive, dynamically-typed DataFrame library for exploratory data analysis.

bug-reports: https://github.com/mchav/dataframe/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Michael Chavinda
maintainer:         mschavinda@gmail.com

copyright: (c) 2024-2024 Michael Chavinda
category: Data
tested-with: GHC ==9.8.3 || ==9.6.6 || == 9.4.8 || ==9.10.1 || ==9.12.1 || ==9.12.2
extra-doc-files: CHANGELOG.md README.md

source-repository head
  type:     git
  location: https://github.com/mchav/dataframe

library
    exposed-modules: DataFrame
    other-modules: DataFrame.Internal.Types,
                   DataFrame.Internal.Expression,
                   DataFrame.Internal.Parsing,
                   DataFrame.Internal.Column,
                   DataFrame.Display.Terminal.PrettyPrint,
                   DataFrame.Display.Terminal.Colours,
                   DataFrame.Internal.DataFrame,
                   DataFrame.Internal.Row,
                   DataFrame.Errors,
                   DataFrame.Operations.Core,
                   DataFrame.Operations.Subset,
                   DataFrame.Operations.Sorting,
                   DataFrame.Operations.Statistics,
                   DataFrame.Operations.Transformations,
                   DataFrame.Operations.Typing,
                   DataFrame.Operations.Aggregation,
                   DataFrame.Display.Terminal.Plot,
                   DataFrame.IO.CSV,
                   DataFrame.Lazy.Internal.Column
    build-depends:    base >= 4.17.2.0 && < 4.22,
                      array ^>= 0.5,
                      attoparsec >= 0.12 && <= 0.14.4,
                      bytestring >= 0.11 && <= 0.12.2.0,
                      containers >= 0.6.7 && < 0.8,
                      directory >= 1.3.0.0 && <= 1.3.9.0,
                      filepath >= 1.0.0.0 && <= 1.5.4.0,
                      hashable >= 1.2 && <= 1.5.0.0,
                      statistics >= 0.16.2.1 && <= 0.16.3.0,
                      text >= 2.0 && <= 2.1.2,
                      time >= 1.12 && <= 1.14,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9
    hs-source-dirs:   src
    default-language: Haskell2010

executable dataframe
    main-is:       Main.hs
    other-modules: DataFrame,
                   DataFrame.Internal.Types,
                   DataFrame.Internal.Expression,
                   DataFrame.Internal.Parsing,
                   DataFrame.Internal.Column,
                   DataFrame.Display.Terminal.PrettyPrint,
                   DataFrame.Display.Terminal.Colours,
                   DataFrame.Internal.DataFrame,
                   DataFrame.Internal.Row,
                   DataFrame.Errors,
                   DataFrame.Operations.Core,
                   DataFrame.Operations.Subset,
                   DataFrame.Operations.Sorting,
                   DataFrame.Operations.Statistics,
                   DataFrame.Operations.Transformations,
                   DataFrame.Operations.Typing,
                   DataFrame.Operations.Aggregation,
                   DataFrame.Display.Terminal.Plot,
                   DataFrame.IO.CSV
    build-depends:    base >= 4.17.2.0 && < 4.22,
                      array ^>= 0.5,
                      attoparsec >= 0.12 && <= 0.14.4,
                      bytestring >= 0.11 && <= 0.12.2.0,
                      containers >= 0.6.7 && < 0.8,
                      directory >= 1.3.0.0 && <= 1.3.9.0,
                      hashable >= 1.2 && <= 1.5.0.0,
                      statistics >= 0.16.2.1 && <= 0.16.3.0,
                      text >= 2.0 && <= 2.1.2,
                      time >= 1.12 && <= 1.14,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9
    hs-source-dirs:   app,
                      src
    default-language: Haskell2010

benchmark dataframe-benchmark
    type:       exitcode-stdio-1.0
    main-is:    Main.hs
    hs-source-dirs: benchmark
    build-depends: base >= 4.17.2.0 && < 4.22,
                   criterion >= 1 && <= 1.6.4.0,
                   text >= 2.0 && <= 2.1.2,
                   random >= 1 && <= 1.3.1,
                   vector ^>= 0.13,
                   dataframe
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules: Assertions,
                   Operations.Apply,
                   Operations.Derive,
                   Operations.Filter,
                   Operations.GroupBy,
                   Operations.InsertColumn,
                   Operations.Sort,
                   Operations.Take
    build-depends: base >= 4.17.2.0 && < 4.22,
                   HUnit ^>= 1.6,
                   random >= 1,
                   random-shuffle >= 0.0.4,
                   text >= 2.0,
                   time >= 1.12,
                   vector ^>= 0.13,
                   dataframe
    hs-source-dirs: tests
    default-language: Haskell2010
