cabal-version:      2.4
name:               dataframe
version:            0.3.1.0

synopsis: A fast, safe, and intuitive DataFrame library.

description: A fast, safe, and intuitive DataFrame library for exploratory data analysis.

bug-reports: https://github.com/mchav/dataframe/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Michael Chavinda
maintainer:         mschavinda@gmail.com

copyright: (c) 2024-2025 Michael Chavinda
category: Data
tested-with: GHC ==9.8.3 || ==9.6.6 || == 9.4.8 || ==9.10.1 || ==9.12.1 || ==9.12.2
extra-doc-files: CHANGELOG.md README.md

source-repository head
  type:     git
  location: https://github.com/mchav/dataframe

library
    default-extensions: Strict
    exposed-modules: DataFrame,
                    DataFrame.Lazy,
                    DataFrame.Functions,
                    DataFrame.Display.Web.Plot,
                    DataFrame.Display.Web.ChartJs,
                    DataFrame.Internal.Types,
                    DataFrame.Internal.Expression,
                    DataFrame.Internal.Parsing,
                    DataFrame.Internal.Column,
                    DataFrame.Internal.Statistics,
                    DataFrame.Display.Terminal.PrettyPrint,
                    DataFrame.Display.Terminal.Colours,
                    DataFrame.Internal.DataFrame,
                    DataFrame.Internal.Row,
                    DataFrame.Internal.Schema,
                    DataFrame.Errors,
                    DataFrame.Operations.Core,
                    DataFrame.Operations.Join,
                    DataFrame.Operations.Merge,
                    DataFrame.Operations.Subset,
                    DataFrame.Operations.Sorting,
                    DataFrame.Operations.Statistics,
                    DataFrame.Operations.Transformations,
                    DataFrame.Operations.Typing,
                    DataFrame.Operations.Aggregation,
                    DataFrame.Display.Terminal.Plot,
                    DataFrame.IO.CSV,
                    DataFrame.IO.Parquet,
                    DataFrame.IO.Parquet.Binary
                    DataFrame.IO.Parquet.Dictionary
                    DataFrame.IO.Parquet.Levels
                    DataFrame.IO.Parquet.Thrift
                    DataFrame.IO.Parquet.ColumnStatistics,
                    DataFrame.IO.Parquet.Compression,
                    DataFrame.IO.Parquet.Encoding,
                    DataFrame.IO.Parquet.Page,
                    DataFrame.IO.Parquet.Time,
                    DataFrame.IO.Parquet.Types,
                    DataFrame.Lazy.IO.CSV,
                    DataFrame.Lazy.Internal.DataFrame
    build-depends:    base > 4 && <5,
                      array ^>= 0.5,
                      attoparsec >= 0.12 && <= 0.14.4,
                      bytestring >= 0.11 && <= 0.12.2.0,
                      bytestring-lexing >= 0.5 && < 0.6,
                      containers >= 0.6.7 && < 0.8,
                      directory >= 1.3.0.0 && <= 1.3.9.0,
                      filepath >= 1.0.0.0 && <= 1.5.4.0,
                      granite ^>= 0.2,
                      hashable >= 1.2 && <= 1.5.0.0,
                      process ^>= 1.6,
                      snappy-hs ^>= 0.1,
                      random >= 1 && <= 1.3.1,
                      template-haskell >= 2.0 && <= 2.30,
                      text >= 2.0 && <= 2.1.2,
                      time >= 1.12 && <= 1.14,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9,
                      zstd >= 0.1.2.0 && <= 0.1.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable dataframe
    main-is:       Main.hs
    build-depends:    base > 4 && < 5,
                      array ^>= 0.5,
                      attoparsec >= 0.12 && <= 0.14.4,
                      bytestring >= 0.11 && <= 0.12.2.0,
                      bytestring-lexing >= 0.5 && < 0.6,
                      containers >= 0.6.7 && < 0.8,
                      dataframe ^>= 0.3,
                      directory >= 1.3.0.0 && <= 1.3.9.0,
                      granite ^>= 0.2,
                      hashable >= 1.2 && <= 1.5.0.0,
                      random >= 1 && <= 1.3.1,
                      snappy-hs ^>= 0.1,
                      template-haskell >= 2.0 && <= 2.30,
                      text >= 2.0 && <= 2.1.2,
                      time >= 1.12 && <= 1.14,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9,
                      zstd >= 0.1.2.0 && <= 0.1.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -rtsopts -threaded -with-rtsopts=-N


benchmark dataframe-benchmark
    type:       exitcode-stdio-1.0
    main-is:    Main.hs
    hs-source-dirs: benchmark
    build-depends: base > 4 && < 5,
                   criterion >= 1 && <= 1.6.4.0,
                   process >= 1.6,
                   text >= 2.0 && <= 2.1.2,
                   time >= 1.12,
                   random >= 1 && <= 1.3.1,
                   vector ^>= 0.13,
                   dataframe ^>= 0.3
    default-language: Haskell2010
    ghc-options:
      -O2
      -threaded
      -rtsopts
      -with-rtsopts=-N

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules: Assertions,
                   Functions,
                   Operations.Apply,
                   Operations.Derive,
                   Operations.Filter,
                   Operations.GroupBy,
                   Operations.InsertColumn,
                   Operations.Sort, 
                   Operations.Statistics, 
                   Operations.Take,
                   Parquet
    build-depends:  base > 4 && < 5,
                    array ^>= 0.5,
                    attoparsec >= 0.12 && <= 0.14.4,
                    bytestring >= 0.11 && <= 0.12.2.0,
                    bytestring-lexing >= 0.5 && < 0.6,
                    containers >= 0.6.7 && < 0.8,
                    dataframe ^>= 0.3,
                    directory >= 1.3.0.0 && <= 1.3.9.0,
                    granite ^>= 0.2,
                    hashable >= 1.2 && <= 1.5.0.0,
                    HUnit ^>= 1.6,
                    random >= 1,
                    random-shuffle >= 0.0.4,
                    random >= 1 && <= 1.3.1,
                    snappy-hs ^>= 0.1,
                    template-haskell >= 2.0 && <= 2.30,
                    text >= 2.0 && <= 2.1.2,
                    time >= 1.12 && <= 1.14,
                    vector ^>= 0.13,
                    vector-algorithms ^>= 0.9,
                    zstd >= 0.1.2.0 && <= 0.1.3.0
    hs-source-dirs: tests
    default-language: Haskell2010
