cabal-version:      3.0
name:               dataframe-hasktorch
version:            0.1.0.2
synopsis:           Converts between dataframes and hasktorch tensors

description:        
    This package provides seamless conversion between dataframes and hasktorch tensors,
    bridging the gap between data manipulation and machine learning workflows.

    Key features:

    * Convert dataframes to floating-point or integer tensors for ML training
    * Automatic handling of multi-column and single-column dataframes
    * Smart dimensional handling (1D tensors for single columns, 2D for multiple)
    * Type-safe conversions with comprehensive error handling

    Typical workflow: load and transform data using dataframes, then convert to
    tensors for training neural networks with hasktorch.

license:            MIT
license-file:       LICENSE

author:             Michael Chavinda
maintainer:         mschavinda@gmail.com

category:           Data
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  DataFrame.Hasktorch

    build-depends:    base >= 4.11 && < 5,
                      vector ^>= 0.13,
                      dataframe >= 0.3.3.3 && < 0.6,
                      hasktorch >= 0.2.1.6 && < 0.3

    hs-source-dirs:   src

    default-language: Haskell2010

test-suite dataframe-hasktorch-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4.11 && < 5,
        dataframe-hasktorch
