cabal-version:      2.4
name:               dataframe-persistent
version:            0.2.0.0

synopsis: Persistent database integration for the dataframe library

description: This package provides integration between the dataframe library and the Persistent database library, allowing you to load database entities into DataFrames and save DataFrames back to the database.

bug-reports: https://github.com/mchav/dataframe/issues
license:            GPL-3.0-or-later
license-file:       ./LICENSE
author:             Michael Chavinda, Junji Hashimoto
maintainer:         mschavinda@gmail.com

copyright: (c) 2024-2025 Michael Chavinda
category: Data, Database
tested-with: GHC ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.3 || ==9.12.2
extra-doc-files: ./CHANGELOG.md ./README.md

source-repository head
  type:     git
  location: https://github.com/mchav/dataframe

common warnings
    ghc-options:
        -Wincomplete-patterns
        -Wincomplete-uni-patterns
        -Wunused-imports
        -Wunused-packages
        -Wunused-local-binds

library
    import: warnings
    default-extensions: Strict
    exposed-modules: DataFrame.IO.Persistent,
                    DataFrame.IO.Persistent.TH
    build-depends:    base >= 4 && <5,
                      bytestring >= 0.11 && < 0.13,
                      containers >= 0.6.7 && < 0.9,
                      dataframe ^>= 0.4,
                      persistent >= 2.14 && < 3,
                      template-haskell >= 2.0 && < 3,
                      text >= 2.0 && < 3,
                      time >= 1.12 && < 2,
                      transformers >= 0.5 && < 0.7,
                      vector ^>= 0.13
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite dataframe-persistent-tests
    import: warnings
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules: PersistentTests
    build-depends:  base >= 4 && < 5,
                    dataframe ^>= 0.4,
                    dataframe-persistent,
                    HUnit ^>= 1.6,
                    monad-logger >= 0.3 && < 0.4,
                    persistent >= 2.14 && < 3,
                    persistent-sqlite >= 2.13 && < 3,
                    resourcet >= 0.1 && < 2,
                    temporary >= 1.3 && < 2,
                    text >= 2.0 && < 3,
                    time >= 1.12 && < 2,
                    transformers >= 0.5 && < 0.7,
                    vector ^>= 0.13
    hs-source-dirs: tests
    default-language: Haskell2010
