cabal-version:      2.4
name:               examples
version:            0.0.0.1

synopsis: Examples for dataframe library.

description: Examples for dataframe library.

bug-reports: https://github.com/mchav/dataframe/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Michael Chavinda
maintainer:         mschavinda@gmail.com

copyright: (c) 2024-2024 Michael Chavinda
category: Data
tested-with: GHC ==9.8.3 || ==9.6.6 || ==9.10.1
extra-doc-files: CHANGELOG.md README.md

source-repository head
  type:     git
  location: https://github.com/mchav/dataframe

executable chipotle
    main-is:       Chipotle.hs
    other-modules: DataFrame,
                   DataFrame.Internal.Types,
                   DataFrame.Internal.Expression,
                   DataFrame.Internal.Parsing,
                   DataFrame.Internal.Column,
                   DataFrame.Internal.Statistics,
                   DataFrame.Display.Terminal.PrettyPrint,
                   DataFrame.Display.Terminal.Colours,
                   DataFrame.Internal.DataFrame,
                   DataFrame.Internal.Row,
                   DataFrame.Errors,
                   DataFrame.Operations.Core,
                   DataFrame.Operations.Subset,
                   DataFrame.Operations.Sorting,
                   DataFrame.Operations.Statistics,
                   DataFrame.Operations.Transformations,
                   DataFrame.Operations.Typing,
                   DataFrame.Operations.Aggregation,
                   DataFrame.Display.Terminal.Plot,
                   DataFrame.IO.CSV,
                   DataFrame.Operations.Join,
                   DataFrame.Operations.Merge,
                   DataFrame.Lazy.IO.CSV,
                   DataFrame.Functions
    build-depends:    base >= 4.17.2.0 && < 4.22,
                      array ^>= 0.5,
                      attoparsec >= 0.12 && <= 0.14.4,
                      bytestring >= 0.11 && <= 0.12.2.0,
                      bytestring-lexing >= 0.5 && < 0.6,
                      containers >= 0.6.7 && < 0.8,
                      directory >= 1.3.0.0 && <= 1.3.9.0,
                      granite ^>= 0.3,
                      hashable >= 1.2 && <= 1.5.0.0,
                      snappy-hs ^>= 0.1,
                      template-haskell >= 2.0 && <= 2.30,
                      text >= 2.0 && <= 2.1.2,
                      time >= 1.12 && <= 1.14,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9,
                      zstd >= 0.1.2.0 && <= 0.1.3.0
    hs-source-dirs:   .,
                      ../src
    default-language: Haskell2010

executable california_housing
    main-is:       CaliforniaHousing.hs
    build-depends:    base >= 4.17.2.0 && < 4.22,
                      array ^>= 0.5,
                      attoparsec >= 0.12 && <= 0.14.4,
                      bytestring >= 0.11 && <= 0.12.2.0,
                      bytestring-lexing >= 0.5 && < 0.6,
                      containers >= 0.6.7 && < 0.8,
                      directory >= 1.3.0.0 && <= 1.3.9.0,
                      dataframe,
                      dataframe-hasktorch,
                      hasktorch,
                      granite ^>= 0.3,
                      hashable >= 1.2 && <= 1.5.0.0,
                      snappy-hs ^>= 0.1,
                      template-haskell >= 2.0 && <= 2.30,
                      text >= 2.0 && <= 2.1.2,
                      time >= 1.12 && <= 1.14,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9,
                      zstd >= 0.1.2.0 && <= 0.1.3.0
    default-language: Haskell2010

executable one_billion_row_challenge
    main-is:       OneBillionRowChallenge.hs
    other-modules: DataFrame,
                   DataFrame.Internal.Types,
                   DataFrame.Internal.Expression,
                   DataFrame.Internal.Parsing,
                   DataFrame.Internal.Column,
                   DataFrame.Internal.Statistics,
                   DataFrame.Display.Terminal.PrettyPrint,
                   DataFrame.Display.Terminal.Colours,
                   DataFrame.Internal.DataFrame,
                   DataFrame.Internal.Row,
                   DataFrame.Errors,
                   DataFrame.Operations.Core,
                   DataFrame.Operations.Subset,
                   DataFrame.Operations.Sorting,
                   DataFrame.Operations.Statistics,
                   DataFrame.Operations.Transformations,
                   DataFrame.Operations.Typing,
                   DataFrame.Operations.Aggregation,
                   DataFrame.Display.Terminal.Plot,
                   DataFrame.IO.CSV,
                   DataFrame.Operations.Join,
                   DataFrame.Operations.Merge,
                   DataFrame.Lazy.IO.CSV,
                   DataFrame.Functions
    build-depends:    base >= 4.17.2.0 && < 4.22,
                      array ^>= 0.5,
                      attoparsec >= 0.12 && <= 0.14.4,
                      bytestring >= 0.11 && <= 0.12.2.0,
                      bytestring-lexing >= 0.5 && < 0.6,
                      containers >= 0.6.7 && < 0.8,
                      directory >= 1.3.0.0 && <= 1.3.9.0,
                      granite ^>= 0.3,
                      hashable >= 1.2 && <= 1.5.0.0,
                      snappy-hs ^>= 0.1,
                      template-haskell >= 2.0 && <= 2.30,
                      text >= 2.0 && <= 2.1.2,
                      time >= 1.12 && <= 1.14,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9,
                      zstd >= 0.1.2.0 && <= 0.1.3.0
    hs-source-dirs:   .,
                      ../src
    default-language: Haskell2010
